data/all_generated_tests/raw_wast_tests/if_InfiniteLoops_1566.wast
;; 7. **Test Description**:    A loop structure that relies on `if` to break upon specific stack state conditions:    - Verifies if incorrect state management within an `if` leads to an unbreakable loop.

(assert_invalid
  (module (func $loop-if-break (result i32)
    (local i32)
    (loop (result i32)
      (local.get 0)
      (i32.const 1)
      (i32.add)
      (local.set 0)
      (local.get 0)
      (i32.const 10)
      (i32.ge_s)
      (if (result i32) (then (br 1 (local.get 0))) (else (local.get 0)))
    )
  ))
  "type mismatch"
)